Updated the responsive design along with fixing white space and added font

--- a/src/pages/Landing/FAQ/styles.css
+++ b/src/pages/Landing/FAQ/styles.css
@@ -31,12 +31,12 @@
     justify-content: center;
   }
   .FAQContainer--Left{
- width:100%;
+ width:auto;
  padding-left: 1rem;
  height: auto;
   }
   .AccordionContainer{
     margin-top: 1rem;
-    width:100%;
+    width:auto;
   }
 }
